<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_icon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_baseline_add_box_24"
        android:title="@string/title_add" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/title_messages" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

</menu>